# knowledge-graph-rag-tutorial

./: Readme.md  docker-compose.yaml  pyproject.toml
notebook/: 1_neo4j_quick_start.ipynb  2.1_semantic_layer_over_graph_db.ipynb  2.2_prompting_strategies.ipynb  3.build_knowledge_grapth.ipynb
src/: wiki2markdown.py
