[tool.poetry]
name = "graph-rag-demo"
version = "0.1.0"
description = ""
authors = ["Atsuki Shirasawa <shirasawa_atsuki@retail-ai.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.2.9"
langchain-openai = "^0.1.10"
langchain-google-vertexai = "^1.0.5"
langchain-community = "^0.2.5"
langchain-experimental = "^0.0.61"
neo4j = "^5.21.0"
arize-phoenix = "^4.4.3"
pypdf = "^4.2.0"
wikipedia = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.9"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = [
    "E",   # pycodestype error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "C90", # mccabe
    "I",   # isort
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "S",   # flake8-bandit 
    "PTH", # flake8-use-pathlib 
]
ignore = [
    "D415", # pydocstyle about First line should end with a '.' , '?' or '!'
    "E501", # line too long, handled by black
]
unfixable = [
    "F401", # disable auto-fix for unused-imports
    "F841", # disable auto-fix for unused-variable
]
target-version = "py311"

[tool.ruff.per-file-ignores]
# ignore assert error only in unnit-test
"test_*.py" = ["S101"]
"*_test.py" = ["S101"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10
